// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`only one entry 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "",
            "rank": "phylum",
          },
        ],
        "count": 1,
        "name": "",
        "rank": "kingdom",
      },
    ],
    "count": 1,
    "name": "Eukaryota",
    "rank": "superKingdom",
  },
]
`;

exports[`taxonomyTree 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "Candida albicans",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "Candida",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "Debaryomycetaceae",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "Saccharomycetales",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "Saccharomycetes",
                "rank": "class",
              },
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "Stachybotrys chartarum",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "Stachybotrys",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "Stachybotryaceae",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "Hypocreales",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "Sordariomycetes",
                "rank": "class",
              },
            ],
            "count": 2,
            "name": "Ascomycota",
            "rank": "phylum",
          },
        ],
        "count": 2,
        "name": "Fungi",
        "rank": "kingdom",
      },
    ],
    "count": 2,
    "name": "Eukaryota",
    "rank": "superKingdom",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "Plasmodium falciparum",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "Plasmodium",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "Plasmodiidae",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "Haemosporida",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "Aconoidasida",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "Apicomplexa",
            "rank": "phylum",
          },
        ],
        "count": 1,
        "name": "",
        "rank": "kingdom",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "Stachybotrys cylindrospora",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "Stachybotrys",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "Stachybotryaceae",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "Hypocreales",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "Sordariomycetes",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "Ascomycota",
            "rank": "phylum",
          },
        ],
        "count": 1,
        "name": "Fungi",
        "rank": "kingdom",
      },
    ],
    "count": 2,
    "name": "bacteria",
    "rank": "superKingdom",
  },
]
`;

exports[`taxonomyTree 2`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "",
            "rank": "phylum",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 2,
                                "name": "",
                                "rank": "species",
                              },
                            ],
                            "count": 2,
                            "name": "",
                            "rank": "genus",
                          },
                        ],
                        "count": 2,
                        "name": "",
                        "rank": "family",
                      },
                    ],
                    "count": 2,
                    "name": "",
                    "rank": "order",
                  },
                ],
                "count": 2,
                "name": "",
                "rank": "class",
              },
            ],
            "count": 2,
            "name": "Ascomycota",
            "rank": "phylum",
          },
        ],
        "count": 3,
        "name": "bacteria",
        "rank": "kingdom",
      },
    ],
    "count": 3,
    "name": "",
    "rank": "superKingdom",
  },
  {
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "",
            "rank": "phylum",
          },
        ],
        "count": 1,
        "name": "",
        "rank": "kingdom",
      },
      {
        "children": [
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "children": [
                          {
                            "children": [
                              {
                                "count": 1,
                                "name": "",
                                "rank": "species",
                              },
                            ],
                            "count": 1,
                            "name": "",
                            "rank": "genus",
                          },
                        ],
                        "count": 1,
                        "name": "",
                        "rank": "family",
                      },
                    ],
                    "count": 1,
                    "name": "",
                    "rank": "order",
                  },
                ],
                "count": 1,
                "name": "",
                "rank": "class",
              },
            ],
            "count": 1,
            "name": "Ascomycota",
            "rank": "phylum",
          },
        ],
        "count": 1,
        "name": "bacteria",
        "rank": "kingdom",
      },
    ],
    "count": 2,
    "name": "Eukaryota",
    "rank": "superKingdom",
  },
]
`;
